--- a/common-logging-starter/build.gradle
+++ b/common-logging-starter/build.gradle
@@ -16,6 +16,8 @@ dependencies {
     implementation 'org.projectlombok:lombok:1.18.26'
     annotationProcessor 'org.projectlombok:lombok:1.18.26'
 
+    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor:2.6.2"
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.0'
 //    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
 //    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
